[package]
name = "linq_sqlite3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
linq_rs = {git="https://github.com/linq-rs/linq-rs.git"}
rdbc = {git="https://github.com/linq-rs/rdbc.git"}
rdbc_sqlite3 = {git="https://github.com/linq-rs/rdbc-sqlite3.git"}

[dev-dependencies]
dotenv = "0.15.0"
pretty_env_logger = "0.4.0"
async-std = {version = "1.11.0", features = ["attributes", "default"]}